--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  color: #040f0f;
-  font-family: roboto;
-}
-
-/* GENERAL STYLES */
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  column-gap: 4.8rem;
-}
-
-.grid--5-cols {
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--2-cols {
-  grid-template-columns: 1fr 1fr;
-}
-
-.grid--1-cols {
-  grid-template-columns: 1fr;
-}
-
-.heading-primary {
-  font-weight: 500;
-  font-size: 4.8rem;
-  margin-bottom: 4.8rem;
-}
-
-.heading-secondary {
-  font-size: 2.4rem;
-  text-transform: uppercase;
-  font-weight: 500;
-  margin-bottom: 2.4rem;
-}
-
-.link:link,
-.link:visited {
-  display: inline-block;
-  text-decoration: none;
-  background-color: #c9fbff;
-  font-size: 1.8rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  color: #040f0f;
-  padding: 1.2rem 2.4rem;
-  border-radius: 33px;
-
-  transition: all 0.3s;
-}
-
-.link:hover,
-.link:active {
-  box-shadow: inset 0 0 0 3px #c9fbff;
-  background-color: #fff;
-}
-
-.link-2:link,
-.link-2:visited {
-  color: #392427;
-  font-weight: 500;
-  line-height: 1.3;
-  transition: all 0.3s;
-}
-
-.link-2:active,
-.link-2:hover {
-  color: #230c0f;
-}
-
 /*****************/
 /**** NAVBAR *****/
 /*****************/
@@ -136,6 +41,22 @@ body {
 .nav-link:active {
   color: #4f5757;
 }
+
+/* MOBILE NAVIGATION */
+
+/* .btn-mobile-nav {
+  background: none;
+  border: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon {
+  stroke: #040f0f;
+  width: 24px;
+  height: 24px;
+} */
 
 /*****************/
 /**** WELCOME *****/
@@ -228,7 +149,7 @@ body {
 
 .skills li {
   list-style: none;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 .certificates {
@@ -266,13 +187,13 @@ body {
 }
 
 .project-name {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 500;
   margin-bottom: 2.4rem;
 }
 
 .project-links {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 
 .pens {
