--- a/css/queries.css
+++ b/css/queries.css
@@ -28,6 +28,10 @@
 }
 
 @media (max-width: 44em) {
+  .welcome {
+    margin-top: 0;
+  }
+
   .desc {
     font-size: 1.6rem;
   }
@@ -46,6 +50,54 @@
     grid-template-columns: 1fr 1fr;
     row-gap: 3.6rem;
   }
+
+  .btn-mobile-nav {
+    display: block;
+  }
+
+  .nav-open .icon-cross {
+    display: block;
+  }
+
+  .nav-open .icon-menu {
+    display: none;
+  }
+
+  .navbar-list {
+    flex-direction: column;
+    gap: 3.6rem;
+  }
+
+  .header {
+    position: relative;
+  }
+
+  .nav-open .main-navbar {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateY(0);
+  }
+
+  .main-navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+    transform: translateY(-100%);
+
+    height: 100vh;
+    transition: all 0.5s ease-in;
+    background-color: rgb(194, 252, 247, 0.54);
+    backdrop-filter: blur(5px);
+  }
 }
 
 @media (max-width: 34em) {
@@ -59,6 +111,18 @@
 
   .project-name {
     font-size: 1.8rem;
+  }
+
+  .heading-primary {
+    font-size: 2.4rem;
+  }
+
+  .subheading {
+    font-size: 1.8rem;
+  }
+
+  .desc {
+    font-size: 1.4rem;
   }
 
   .certificates,
@@ -75,7 +139,26 @@
     row-gap: 2.4rem;
   }
 
+  /* Mobile Navigation */
+  .main-navbar {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .welcome-btns {
+    grid-template-columns: 10rem;
+    row-gap: 2.4rem;
+    justify-items: center;
+    justify-content: center;
+  }
+
+  .link:link,
+  .link:visited {
+    font-size: 1.2rem;
+  }
+
   footer p {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 }
