added smart navigation

--- a/css/queries.css
+++ b/css/queries.css
@@ -3,14 +3,12 @@
 /************************/
 @media (max-width: 75em) {
   html {
-    /* 9px / 16px = 56.25% */
     font-size: 56.25%;
   }
 }
 
 @media (max-width: 59em) {
   html {
-    /* 8px / 16px = 0.5 =>50% */
     font-size: 50%;
   }
 
@@ -71,6 +69,11 @@
 
   .header {
     position: relative;
+    background-color: #fff;
+  }
+
+  .sticky .header {
+    background-color: #fff;
   }
 
   .nav-open .main-navbar {
@@ -84,6 +87,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 3.2rem;
 
     position: absolute;
     top: 0;
@@ -96,8 +100,17 @@
 
     height: 100vh;
     transition: all 0.5s ease-in;
-    background-color: rgb(194, 252, 247, 0.54);
-    backdrop-filter: blur(20px);
+    background-color: rgb(194, 252, 247);
+    backdrop-filter: blur(15px);
+  }
+
+  .navbar-list {
+    margin: 0;
+    gap: 5.6rem;
+  }
+
+  .main-navbar li {
+    font-size: 4.8rem;
   }
 }
 
