--- a/css/queries.css
+++ b/css/queries.css
@@ -69,11 +69,11 @@
 
   .header {
     position: relative;
-    background-color: #fff;
+    background-color: var(--tint1);
   }
 
   .sticky .header {
-    background-color: #fff;
+    background-color: var(--tint1);
   }
 
   .nav-open .main-navbar {
