--- a/css/general.css
+++ b/css/general.css
@@ -1,9 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+/* FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/* COLORS */
+
+:root {
+  --primary-color: #099268;
+  --tint1: #cee9e1;
+  --shade1: #08835e;
+  --white: #fff;
 }
 
 html {
@@ -12,7 +22,8 @@ html {
 
 body {
   color: #040f0f;
-  font-family: roboto;
+  font-family: "Rubik", sans-serif;
+  font-size: 1.8rem;
 }
 
 /* GENERAL STYLES */
@@ -47,9 +58,11 @@ body {
 }
 
 .heading-primary {
-  font-weight: 500;
-  font-size: 4.8rem;
+  font-weight: 700;
+  font-size: 4.4rem;
   margin-bottom: 4.8rem;
+  text-transform: uppercase;
+  color: #333;
 }
 
 .heading-secondary {
@@ -57,9 +70,10 @@ body {
   text-transform: uppercase;
   font-weight: 500;
   margin-bottom: 2.4rem;
+  color: #333;
 }
 
-.link:link,
+/* .link:link,
 .link:visited {
   display: inline-block;
   text-decoration: none;
@@ -78,11 +92,11 @@ body {
 .link:active {
   box-shadow: inset 0 0 0 3px #c9fbff;
   background-color: #fff;
-}
+} */
 
 .link-2:link,
 .link-2:visited {
-  color: #392427;
+  color: #333;
   font-weight: 500;
   line-height: 1.3;
   transition: all 0.3s;
@@ -90,5 +104,41 @@ body {
 
 .link-2:active,
 .link-2:hover {
-  color: #230c0f;
+  color: var(--shade1);
+  text-decoration: none;
+}
+
+.highlight-text {
+  position: relative;
+  display: inline-block;
+}
+
+.highlight-text::before {
+  content: "";
+  position: absolute;
+  top: -22%;
+  left: -5%;
+  width: 100%;
+  height: 5rem;
+  border: 3px solid var(--primary-color);
+  border-radius: 50%;
+  transform: rotate(2deg);
+  padding: 1.2rem;
+
+  transition: all 0.3s;
+}
+
+.highlight-text::after {
+  content: "";
+  position: absolute;
+  top: -22%;
+  left: -5%;
+  width: 100%;
+  height: 5rem;
+  border-radius: 50%;
+  border: 3px solid var(--primary-color);
+  transform: rotate(-5deg);
+  padding: 1.2rem;
+
+  transition: all 0.3s;
 }
