--- a/css/general.css
+++ b/css/general.css
@@ -14,6 +14,8 @@
   --tint1: #cee9e1;
   --shade1: #08835e;
   --white: #fff;
+  --gray: #333;
+  --black: #040f0f;
 }
 
 html {
@@ -21,16 +23,19 @@ html {
 }
 
 body {
-  color: #040f0f;
+  color: var(--black);
   font-family: "Rubik", sans-serif;
   font-size: 1.8rem;
 }
 
 /* GENERAL STYLES */
 .container {
-  max-width: 120rem;
+  max-width: 130rem;
   margin: 0 auto;
+  padding: 0 3.2rem;
 }
+
+/* GRIDS */
 
 .grid {
   display: grid;
@@ -57,12 +62,14 @@ body {
   grid-template-columns: 1fr;
 }
 
+/* HEADINGS */
+
 .heading-primary {
   font-weight: 700;
   font-size: 4.4rem;
   margin-bottom: 4.8rem;
   text-transform: uppercase;
-  color: #333;
+  color: var(--gray);
 }
 
 .heading-secondary {
@@ -70,33 +77,14 @@ body {
   text-transform: uppercase;
   font-weight: 500;
   margin-bottom: 2.4rem;
-  color: #333;
+  color: var(--gray);
 }
 
-/* .link:link,
-.link:visited {
-  display: inline-block;
-  text-decoration: none;
-  background-color: #c9fbff;
-  font-size: 1.8rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  color: #040f0f;
-  padding: 1.2rem 2.4rem;
-  border-radius: 33px;
-
-  transition: all 0.3s;
-}
-
-.link:hover,
-.link:active {
-  box-shadow: inset 0 0 0 3px #c9fbff;
-  background-color: #fff;
-} */
+/* LINKS */
 
 .link-2:link,
 .link-2:visited {
-  color: #333;
+  color: var(--gray);
   font-weight: 500;
   line-height: 1.3;
   transition: all 0.3s;
@@ -116,7 +104,7 @@ body {
 .highlight-text::before {
   content: "";
   position: absolute;
-  top: -22%;
+  top: -30%;
   left: -5%;
   width: 100%;
   height: 5rem;
@@ -131,7 +119,7 @@ body {
 .highlight-text::after {
   content: "";
   position: absolute;
-  top: -22%;
+  top: -30%;
   left: -5%;
   width: 100%;
   height: 5rem;
@@ -141,4 +129,9 @@ body {
   padding: 1.2rem;
 
   transition: all 0.3s;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem var(--shade1);
 }
